[project]
name = "site-1ano"
version = "0.1.0"
description = ""
authors = [
    {name = "claudio.carvalho",email = "claudio.carvalhogt@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "site_1ano", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
